# autobot

./: README.md
autobot_description/: CMakeLists.txt  package.xml
autobot_description/install/: local_setup.sh  setup.bash  setup.sh  setup.zsh
autobot_description/install/autobot_description/share/ament_index/resource_index/package_run_dependencies/: autobot_description
autobot_description/install/autobot_description/share/autobot_description/: package.bash  package.ps1  package.sh
autobot_description/install/autobot_description/share/autobot_description/launch/: publish_urdf.launch.py
autobot_description/install/autobot_description/share/autobot_description/urdf/: robot.urdf
autobot_description/launch/: publish_urdf.launch.py
autobot_description/log/: latest_build
autobot_description/meshes/: base_link.STL  caster_link.STL  left_link.STL  lidar_Link.STL  right_Link.STL
autobot_description/rviz/: autobot.rviz
autobot_description/urdf/: autobot.urdf  plugins.xacro  test.urdf.xacro
autobot_gazebo/: CMakeLists.txt  package.xml
autobot_gazebo/launch/: spawn_autobot_ros2.launch.xml  spawn_robot_description.launch.py  start_world.launch.py
autobot_gazebo/meshes/: base_link.STL  left_back_link.STL  left_link.dae  lidar_link.dae
autobot_gazebo/models/autobot/meshes/: base_link.dae  caster_link.dae  left_front_link.STL  lidar_link.STL  right_back_link.STL  right_front_link.STL  right_link.dae
autobot_gazebo/models/track/: model.config  model.sdf
autobot_gazebo/src/: autobot_information.hpp  encoder.cpp
autobot_gazebo/worlds/: course.world
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/autobot_description/share/autobot_description/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.dsv  package.sh  package.xml  package.zsh
install/autobot_gazebo/lib/autobot_gazebo/: encoder_information
log/: latest_build
(+42 files in other folders)
